--- a/fireflight/src/styles/_navigation.scss
+++ b/fireflight/src/styles/_navigation.scss
@@ -8,10 +8,13 @@
   background-image: $accentColorTransparency;
 
   .brand {
-    height: 60px;
+    height: 100px;
     padding: 8px;
     margin-bottom: 15px;
-    margin-left: 10px;
+
+    .logo {
+      height: 100px;
+    }
   }
 
   .dropdown {
@@ -29,7 +32,6 @@
       &.current {
         background-color: lightgrey;
         color: #355C7D;
-        padding: 0px;
       }
     }
   }
@@ -45,12 +47,17 @@
 
   .inactive {
     color: #FFF;
+    padding: 0px;
   }
 
   .fas,
   .far {
     display: block;
-    padding: 5px;
+    padding: 8px;
+  }
+
+  .fa-user-plus, .fa-user-check {
+    margin-left: 8px
   }
 
   .menu-item {
@@ -58,6 +65,7 @@
     cursor: pointer;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
+    margin: 0;
     padding: 10px;
 
     &:hover {
